--- a/requirements.txt
+++ b/requirements.txt
@@ -1,115 +1,73 @@
-# This file may be used to create an environment using:
-# $ conda create --name <env> --file <this file>
-# platform: win-64
-async_generator=1.10=py37h28b3542_0
-attrs=21.2.0=pyhd3eb1b0_0
-backcall=0.2.0=pyhd3eb1b0_0
-blas=1.0=mkl
-bleach=3.3.1=pyhd3eb1b0_0
-bottleneck=1.3.2=py37h2a96729_1
-ca-certificates=2021.7.5=haa95532_1
-certifi=2021.5.30=py37haa95532_0
-click=8.0.1=pyhd3eb1b0_0
-colorama=0.4.4=pyhd3eb1b0_0
-cycler=0.10.0=py37_0
-decorator=5.0.9=pyhd3eb1b0_0
-defusedxml=0.7.1=pyhd3eb1b0_0
-entrypoints=0.3=py37_0
-flask=1.1.2=pyhd3eb1b0_0
-freetype=2.10.4=hd328e21_0
-icc_rt=2019.0.0=h0cc432a_1
-icu=58.2=ha925a31_3
-importlib-metadata=3.10.0=py37haa95532_0
-importlib_metadata=3.10.0=hd3eb1b0_0
-intel-openmp=2021.3.0=haa95532_3372
-ipykernel=5.3.4=py37h5ca1d4c_0
-ipython=7.22.0=py37hd4e2768_0
-ipython_genutils=0.2.0=pyhd3eb1b0_1
-itsdangerous=2.0.1=pyhd3eb1b0_0
-jedi=0.17.0=py37_0
-jinja2=3.0.1=pyhd3eb1b0_0
-joblib=1.0.1=pyhd3eb1b0_0
-jpeg=9b=hb83a4c4_2
-jsonschema=3.2.0=py_2
-jupyter_client=6.1.12=pyhd3eb1b0_0
-jupyter_core=4.7.1=py37haa95532_0
-jupyterlab_pygments=0.1.2=py_0
-kiwisolver=1.3.1=py37hd77b12b_0
-libpng=1.6.37=h2a8f88b_0
-libsodium=1.0.18=h62dcd97_0
-libtiff=4.2.0=hd0e1b90_0
-lz4-c=1.9.3=h2bbff1b_0
-m2w64-gcc-libgfortran=5.3.0=6
-m2w64-gcc-libs=5.3.0=7
-m2w64-gcc-libs-core=5.3.0=7
-m2w64-gmp=6.1.0=2
-m2w64-libwinpthread-git=5.0.0.4634.697f757=2
-markupsafe=2.0.1=py37h2bbff1b_0
-matplotlib=3.3.4=py37haa95532_0
-matplotlib-base=3.3.4=py37h49ac443_0
-mistune=0.8.4=py37hfa6e2cd_1001
-mkl=2021.3.0=haa95532_524
-mkl-service=2.4.0=py37h2bbff1b_0
-mkl_fft=1.3.0=py37h277e83a_2
-mkl_random=1.2.2=py37hf11a4ad_0
-msys2-conda-epoch=20160418=1
-nbclient=0.5.3=pyhd3eb1b0_0
-nbconvert=6.1.0=py37haa95532_0
-nbformat=5.1.3=pyhd3eb1b0_0
-nest-asyncio=1.5.1=pyhd3eb1b0_0
-notebook=6.0.1=py37_0
-numexpr=2.7.3=py37hb80d3ca_1
-numpy=1.20.3=py37ha4e8547_0
-numpy-base=1.20.3=py37hc2deb75_0
-olefile=0.46=py37_0
-openssl=1.1.1k=h2bbff1b_0
-packaging=21.0=pyhd3eb1b0_0
-pandas=1.3.0=py37hd77b12b_0
-pandocfilters=1.4.3=py37haa95532_1
-parso=0.8.2=pyhd3eb1b0_0
-pickle5=0.0.11=py37hcc03f2d_0
-pickleshare=0.7.5=pyhd3eb1b0_1003
-pillow=8.3.1=py37h4fa10fc_0
-pip=21.2.1=pypi_0
-prometheus_client=0.11.0=pyhd3eb1b0_0
-prompt-toolkit=3.0.17=pyh06a4308_0
-pygments=2.9.0=pyhd3eb1b0_0
-pyparsing=2.4.7=pyhd3eb1b0_0
-pyqt=5.9.2=py37h6538335_2
-pyrsistent=0.17.3=py37he774522_0
-python=3.7.10=h6244533_0
-python-dateutil=2.8.2=pyhd3eb1b0_0
-python_abi=3.7=2_cp37m
-pytz=2021.1=pyhd3eb1b0_0
-pywin32=227=py37he774522_1
-pywinpty=0.5.7=py37_0
-pyzmq=20.0.0=py37hd77b12b_1
-qt=5.9.7=vc14h73c81de_0
-scikit-learn=0.24.2=py37hf11a4ad_1
-scipy=1.6.2=py37h66253e8_1
-seaborn=0.11.1=pyhd3eb1b0_0
-send2trash=1.5.0=pyhd3eb1b0_1
-setuptools=52.0.0=py37haa95532_0
-sip=4.19.8=py37h6538335_0
-six=1.16.0=pyhd3eb1b0_0
-sqlite=3.36.0=h2bbff1b_0
-terminado=0.9.4=py37haa95532_0
-testpath=0.5.0=pyhd3eb1b0_0
-threadpoolctl=2.2.0=pyhb85f177_0
-tk=8.6.10=he774522_0
-tornado=6.1=py37h2bbff1b_0
-traitlets=5.0.5=pyhd3eb1b0_0
-typing_extensions=3.10.0.0=pyh06a4308_0
-vc=14.2=h21ff451_1
-vs2015_runtime=14.27.29016=h5e58377_2
-wcwidth=0.2.5=py_0
-webencodings=0.5.1=py37_1
-werkzeug=1.0.1=pyhd3eb1b0_0
-wheel=0.36.2=pyhd3eb1b0_0
-wincertstore=0.2=py37_0
-winpty=0.4.3=4
-xz=5.2.5=h62dcd97_0
-zeromq=4.3.3=ha925a31_3
-zipp=3.5.0=pyhd3eb1b0_0
-zlib=1.2.11=h62dcd97_4
-zstd=1.4.9=h19a0ad4_0
+async-generator==1.10
+attrs @ file:///tmp/build/80754af9/attrs_1620827162558/work
+backcall @ file:///home/ktietz/src/ci/backcall_1611930011877/work
+bleach @ file:///tmp/build/80754af9/bleach_1626470256873/work
+Bottleneck==1.3.2
+certifi==2021.5.30
+click @ file:///tmp/build/80754af9/click_1621604852318/work
+colorama @ file:///tmp/build/80754af9/colorama_1607707115595/work
+cycler==0.10.0
+decorator @ file:///tmp/build/80754af9/decorator_1621259047763/work
+defusedxml @ file:///tmp/build/80754af9/defusedxml_1615228127516/work
+entrypoints==0.3
+Flask @ file:///home/ktietz/src/ci/flask_1611932660458/work
+importlib-metadata @ file:///C:/ci/importlib-metadata_1617877486026/work
+ipykernel @ file:///C:/ci/ipykernel_1596208728219/work/dist/ipykernel-5.3.4-py3-none-any.whl
+ipython @ file:///C:/ci/ipython_1617121109687/work
+ipython-genutils @ file:///tmp/build/80754af9/ipython_genutils_1606773439826/work
+itsdangerous @ file:///tmp/build/80754af9/itsdangerous_1621432558163/work
+jedi==0.17.0
+Jinja2 @ file:///tmp/build/80754af9/jinja2_1624781299557/work
+joblib @ file:///tmp/build/80754af9/joblib_1613502643832/work
+jsonschema @ file:///tmp/build/80754af9/jsonschema_1602607155483/work
+jupyter-client @ file:///tmp/build/80754af9/jupyter_client_1616770841739/work
+jupyter-core @ file:///C:/ci/jupyter_core_1612213516947/work
+jupyterlab-pygments @ file:///tmp/build/80754af9/jupyterlab_pygments_1601490720602/work
+kiwisolver @ file:///C:/ci/kiwisolver_1612282618948/work
+MarkupSafe @ file:///C:/ci/markupsafe_1621528383308/work
+matplotlib @ file:///C:/ci/matplotlib-suite_1613408055530/work
+mistune @ file:///C:/ci/mistune_1594373272338/work
+mkl-fft==1.3.0
+mkl-random @ file:///C:/ci/mkl_random_1626186163140/work
+mkl-service==2.4.0
+nbclient @ file:///tmp/build/80754af9/nbclient_1614364831625/work
+nbconvert @ file:///C:/ci/nbconvert_1624479160228/work
+nbformat @ file:///tmp/build/80754af9/nbformat_1617383369282/work
+nest-asyncio @ file:///tmp/build/80754af9/nest-asyncio_1613680548246/work
+notebook==6.0.1
+numexpr @ file:///C:/ci/numexpr_1618856761305/work
+numpy @ file:///C:/ci/numpy_and_numpy_base_1626271861146/work
+olefile==0.46
+packaging @ file:///tmp/build/80754af9/packaging_1625611678980/work
+pandas @ file:///C:/ci/pandas_1626784212000/work
+pandocfilters @ file:///C:/ci/pandocfilters_1605102427207/work
+parso @ file:///tmp/build/80754af9/parso_1617223946239/work
+pickle5 @ file:///D:/bld/pickle5_1623183604889/work
+pickleshare @ file:///tmp/build/80754af9/pickleshare_1606932040724/work
+Pillow @ file:///C:/ci/pillow_1625663286921/work
+prometheus-client @ file:///tmp/build/80754af9/prometheus_client_1623189609245/work
+prompt-toolkit @ file:///tmp/build/80754af9/prompt-toolkit_1616415428029/work
+Pygments @ file:///tmp/build/80754af9/pygments_1621606182707/work
+pyparsing @ file:///home/linux1/recipes/ci/pyparsing_1610983426697/work
+pyrsistent @ file:///C:/ci/pyrsistent_1600123688363/work
+python-dateutil @ file:///tmp/build/80754af9/python-dateutil_1626374649649/work
+pytz @ file:///tmp/build/80754af9/pytz_1612215392582/work
+pywin32==227
+pywinpty==0.5.7
+pyzmq==20.0.0
+scikit-learn @ file:///C:/ci/scikit-learn_1622739441385/work
+scipy @ file:///C:/ci/scipy_1618856134946/work
+seaborn @ file:///tmp/build/80754af9/seaborn_1608578541026/work
+Send2Trash @ file:///tmp/build/80754af9/send2trash_1607525499227/work
+six @ file:///tmp/build/80754af9/six_1623709665295/work
+terminado==0.9.4
+testpath @ file:///tmp/build/80754af9/testpath_1624638946665/work
+threadpoolctl @ file:///tmp/build/80754af9/threadpoolctl_1626115094421/work
+tornado @ file:///C:/ci/tornado_1606935947090/work
+traitlets @ file:///home/ktietz/src/ci/traitlets_1611929699868/work
+typing-extensions @ file:///tmp/build/80754af9/typing_extensions_1624965014186/work
+wcwidth @ file:///tmp/build/80754af9/wcwidth_1593447189090/work
+webencodings==0.5.1
+Werkzeug @ file:///home/ktietz/src/ci/werkzeug_1611932622770/work
+wincertstore==0.2
+zipp @ file:///tmp/build/80754af9/zipp_1625570634446/work
