--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ decorator==5.0.9
 defusedxml==0.7.1
 entrypoints==0.3
 Flask==1.1.2
+gunicorn==20.1.0
 importlib-metadata==3.10.0
 ipykernel==5.3.4
 ipython==7.22.0
